[HW-2] add search users by first/last name
